--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  border-box: none;
+}
+
+/* ///navbar///////////////////////////////////// */
+nav{
+  height: 100vh;
+  width: 20%;
+  border: 1px solid blue;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  margin: auto 0;
 }
 
-.App-link {
-  color: #61dafb;
+nav section{
+  width: 90%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav section h3{
+  font-size: 20px;
 }
+
+
+nav section div img{
+  width: 80%;
+  border-radius: 50%;
+}
+
+nav section h4{
+  font-size: 16px;
+}
+
+nav section h6{
+  font-size: 14px;
+}
+
+nav ul{
+  list-style: none;
+  margin: auto 0;
+  border: 2px solid pink;
+  width: 100%;
+}
+
+nav ul li{
+  border: 2px solid blue;
+  width: 100%;
+}
+
