--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ nav section h3{
 
 nav section div img{
   width: 80%;
+  height: 30%;
   border-radius: 50%;
 }
 
@@ -58,3 +59,4 @@ nav ul li{
   width: 100%;
   color: black;
 }
+
