--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
 /* ///navbar///////////////////////////////////// */
 nav{
   height: 100vh;
-  width: 20%;
-  border: 1px solid blue;
+  width: 15%;
+  border: 1px solid black;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -25,9 +25,9 @@ nav section h3{
 
 
 nav section div img{
-  width: 80%;
+  width: 60%;
   height: 30%;
-  border-radius: 50%;
+  border-radius: 450px;
 }
 
 nav section h4{
@@ -38,18 +38,6 @@ nav section h6{
   font-size: 14px;
 }
 
-/* nav ul{
-  list-style: none;
-  margin: auto 0;
-  border: 2px solid pink;
-  width: 100%;
-}
-
-nav ul li{
-  border: 2px solid blue;
-  width: 100%;
-} */
-
 .links{
   display: flex;
   justify-content: center;
@@ -58,5 +46,15 @@ nav ul li{
 .links a{
   width: 100%;
   color: black;
+  text-decoration: none;
 }
 
+.social{
+  font-size: 25px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.social a {
+  color: black;
+}
