--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,12 @@ nav{
   flex-wrap: wrap;
   margin: auto 0;
 }
+  @media (max-width: 760px){
+    nav{
+      width: 20%;
+  }
+}
+
 
 nav section{
   width: 90%;
