--- a/src/components/SkillCard.css
+++ b/src/components/SkillCard.css
@@ -1,4 +1,22 @@
 .skills{
     display: flex;
-    color: blue;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    border: 2px solid green;
+}
+
+.skills section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 15%;
+    font-size: 15px;
+    border: 2px solid greenyellow;
+}
+
+.skills section svg{
+    font-size: 35px;
+    
 }
