--- a/src/components/SideNav.css
+++ b/src/components/SideNav.css
@@ -4,6 +4,7 @@ nav{
     border: 1px solid black;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     margin: auto 0;
   }
