--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,10 +4,10 @@
 } */
 
 .HomeTextContainer{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
