--- a/src/components/SideNav.css
+++ b/src/components/SideNav.css
@@ -1,6 +1,6 @@
 nav{
     height: 100vh;
-    width: 15%;
+    width: 20%;
     border: 1px solid black;
     display: flex;
     justify-content: center;
@@ -18,9 +18,13 @@ nav{
   nav section{
     width: 90%;
   }
+
+  nav section section{
+    border: 2px solid green;
+  }
   
   nav section h3{
-    font-size: 20px;
+    font-size: 25px;
   }
   
   
@@ -31,11 +35,11 @@ nav{
   }
   
   nav section h4{
-    font-size: 16px;
+    font-size: 18px;
   }
   
   nav section h6{
-    font-size: 14px;
+    font-size: 16px;
   }
   
   .links{
@@ -47,6 +51,8 @@ nav{
     width: 100%;
     color: black;
     text-decoration: none;
+    font-size: 20px;
+    margin-bottom: 20px;
   }
   
   .social{
