--- a/src/components/SkillCard.css
+++ b/src/components/SkillCard.css
@@ -2,8 +2,16 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
     width: 100%;
-    border: 2px solid green;
+    /* border: 2px solid green; */
+}
+.skills h5{
+    width: 100%;
+    padding-right: 20px;
+    margin-bottom: 15px;
+    text-align: end;
+    border-bottom: 2px dashed pink;
 }
 
 .skills section{
@@ -13,10 +21,10 @@
     justify-content: center;
     width: 15%;
     font-size: 15px;
-    border: 2px solid greenyellow;
+   
 }
 
 .skills section svg{
-    font-size: 35px;
-    
+    font-size: 45px;
+    margin-bottom: 10px;
 }
