--- a/src/components/SideNav.css
+++ b/src/components/SideNav.css
@@ -1,6 +1,6 @@
 nav{
     height: 100vh;
-    width: 20%;
+    max-width: 15%;
     border: 1px solid black;
     display: flex;
     justify-content: center;
@@ -10,8 +10,8 @@ nav{
   }
     @media (max-width: 760px){
       nav{
-        width: 20%;
-    }
+        max-width: 25%;
+      }
   }
   
   
