--- a/src/components/SideNav.css
+++ b/src/components/SideNav.css
@@ -20,13 +20,21 @@ nav{
   }
 
   nav section section{
-    border: 2px solid green;
+    width: 60%;
+    margin: 10px auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
   }
   
   nav section h3{
     font-size: 25px;
   }
   
+  nav section div{
+    overflow: hidden;
+    border: ;
+  }
   
   nav section div img{
     width: 60%;
