--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
 .App {
-  text-align: center;
-  display: flex;
-  
-  
+	float: right;
+	text-align: center;
+	display: flex;
+	justify-content: flex-end;
+	border: 1px solid blue;
+	width: 85%;
 }
+@media (max-width: 760px){
+		.App{
+		  width: 75%;
+		  border: 2px solid pink;
+		}
+	}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
