--- a/src/components/ProjectsCard.css
+++ b/src/components/ProjectsCard.css
@@ -7,10 +7,34 @@
     border: 3px solid blueviolet;
 }
 
-.projectCard div{
+.projectCard h3{
+    text-align: end;
+    width: 100%;
+    margin-bottom: 10px;
+    font-size: 20px;
+
+}
+.projectCard .cardContainer{
     width: 100%;
 }
 
 .projectCard img{
     width: 90%;
 }
+
+.projectCard p{
+    border: 1px solid pink;
+    width: 90%;
+    font-size: 16px;
+}
+
+.projectCard .projectButton{
+    color: red;
+    border: 2px solid pink;
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    margin: 10px auto;
+}
+
+
