--- a/src/components/SideNav.css
+++ b/src/components/SideNav.css
@@ -7,6 +7,8 @@ nav{
     align-items: center;
     flex-wrap: wrap;
     margin: auto 0;
+    position: fixed;
+    text-align: center;
   }
     @media (max-width: 760px){
       nav{
@@ -31,10 +33,7 @@ nav{
     font-size: 25px;
   }
   
-  nav section div{
-    overflow: hidden;
-    border: ;
-  }
+  
   
   nav section div img{
     width: 60%;
