--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,3 +1,22 @@
 .projects{
-    width: 80%;
+    width: 100%;
+    height: 100vh;
+    /* vertical-align: middle;  */
+
+}
+.projects h1{
+    margin: 20px 0;
+}
+
+@media(max-width: 760px){
+    .projects h1{
+        margin-top: 10px;
+    }
+}
+
+.projects .projectList{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
