--- a/src/components/ProjectsCard.css
+++ b/src/components/ProjectsCard.css
@@ -6,7 +6,9 @@
     justify-content: center;
     margin-top: 25px;
     border: 1px solid black;
-    box-shadow: gray;
+    border-radius: 25px;
+    box-shadow: 5px 10px #888888;
+      
 }
 
 @media (max-width: 760px){
@@ -18,7 +20,7 @@
 
 .projectCard h3{
     text-align: end;
-    width: 100%;
+    width: 95%;
     margin-bottom: 10px;
     font-size: 20px;
 
