--- a/src/components/SkillCard.css
+++ b/src/components/SkillCard.css
@@ -4,8 +4,9 @@
     align-items: center;
     flex-wrap: wrap;
     width: 100%;
-    /* border: 2px solid green; */
+    flex-wrap: wrap;
 }
+
 .skills h5{
     width: 100%;
     padding-right: 20px;
@@ -19,7 +20,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 15%;
+    width: 30%;
     font-size: 15px;
    
 }
