--- a/src/components/ProjectsCard.css
+++ b/src/components/ProjectsCard.css
@@ -8,6 +8,7 @@
     border: 1px solid black;
     border-radius: 25px;
     box-shadow: 5px 10px #888888;
+    background-color: #cccccc;
       
 }
 
@@ -44,6 +45,11 @@
     display: flex;
     justify-content: space-around;
     margin: 10px auto;
+    
+}
+
+.projectCard .projectButton button{
+    background-color: #6d6d64;
 }
 
 
