--- a/src/components/ProjectsCard.css
+++ b/src/components/ProjectsCard.css
@@ -6,7 +6,7 @@
     justify-content: center;
     margin-top: 25px;
     border: 1px solid black;
-    border-radius: 25px;
+    border-radius: 15px;
     box-shadow: 5px 10px #888888;
     background-color: #cccccc;
       
@@ -49,7 +49,7 @@
 }
 
 .projectCard .projectButton button{
-    background-color: #6d6d64;
+    background-color: #f8f8ff;
 }
 
 
