--- a/src/components/SideNav.css
+++ b/src/components/SideNav.css
@@ -9,7 +9,7 @@ nav{
     margin: auto 0;
     position: fixed;
     text-align: center;
-    background-color: #333333
+    background-color: #696969;
   }
     @media (max-width: 760px){
       nav{
